# Aggregator

./: README  random.cpp
lidar/: LidarTask3.odt  Lidar_task1.odt  README  lidar_modifications.odt  lidar_presentation.ppt
lidar/lidar_code/: README  runLidar.launch
lidar/lidar_code/devel/: .catkin  .rosinstall  setup.sh
lidar/lidar_code/devel/include/shared_files/: angle_rotation.h  position.h
lidar/lidar_code/devel/lib/filtering/: convert_cloud_node  convert_input_cloud_node  passthrough_filter_node  statistical_outlier_filter_node
lidar/lidar_code/devel/lib/pcl_extraction/: calc_centroid_node  calc_position_node  extract_indices_node  ransac_node
lidar/lidar_code/devel/lib/pkgconfig/: filtering.pc  pcl_extraction.pc  shared_files.pc
lidar/lidar_code/devel/lib/python2.7/dist-packages/shared_files/msg/: __init__.py  _angle_rotation.py  _position.py
lidar/lidar_code/devel/share/common-lisp/ros/shared_files/msg/: _package.lisp  _package_angle_rotation.lisp  _package_position.lisp  angle_rotation.lisp  position.lisp  shared_files-msg.asd
lidar/lidar_code/devel/share/filtering/cmake/: filteringConfig.cmake
lidar/lidar_code/devel/share/pcl_extraction/cmake/: pcl_extractionConfig.cmake
lidar/lidar_code/devel/share/shared_files/cmake/: shared_files-msg-paths.cmake  shared_filesConfig.cmake
lidar/lidar_code/src/filtering/: CMakeLists.txt
lidar/lidar_code/src/filtering/src/: convert_cloud.cpp  convert_input_cloud.cpp  passthrough_filter.cpp  statistical_outlier_filter.cpp
lidar/lidar_code/src/pcl_extraction/: CMakeLists.txt  package.xml
lidar/lidar_code/src/pcl_extraction/src/: calc_centroid_node.cpp  calc_position.cpp  extract_indices_node.cpp  ransac_node.cpp
lidar/lidar_code/src/shared_files/: CMakeLists.txt
lidar/lidar_code/src/shared_files/msg/: angle_rotation.msg  position.msg
prototype/devel/: .catkin  .rosinstall  setup.sh
prototype/devel/include/shared_files/: drive.h
prototype/devel/lib/laptop_control/: laptop_node
prototype/devel/lib/motor_control/: motor_control_node
prototype/devel/lib/pkgconfig/: laptop_control.pc  motor_control.pc  shared_files.pc
prototype/devel/lib/python2.7/dist-packages/shared_files/msg/: __init__.py  _drive.py
prototype/devel/lib/shared_files/: shared_files_node
prototype/devel/share/common-lisp/ros/shared_files/msg/: _package.lisp  _package_drive.lisp  drive.lisp  shared_files-msg.asd
prototype/devel/share/laptop_control/cmake/: laptop_controlConfig.cmake
prototype/devel/share/motor_control/cmake/: motor_controlConfig.cmake
prototype/devel/share/shared_files/cmake/: shared_files-msg-extras.cmake  shared_files-msg-paths.cmake  shared_filesConfig.cmake
prototype/src/laptop_control/: CMakeLists.txt
prototype/src/laptop_control/src/: laptop_node.cpp
prototype/src/motor_control/: CMakeLists.txt  package.xml
prototype/src/motor_control/src/: motor_control_node.cpp
prototype/src/shared_files/: CMakeLists.txt
prototype/src/shared_files/msg/: drive.msg
prototype/src/shared_files/src/: shared_files_node.cpp
